--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -31,7 +31,7 @@
 ; Make sure "Require OAuth2 Code Grant" is unchecked.  You also do not need to
 ; add any "Redirect URIs" or "RPC Origins".
 ;
-Token = bot_token
+Token = MzEzODUwMjAwMTM5NzU5NjE2.C_vnYQ.UX8Xouel0PZvURLmdU_jgiegQ2s
 
 
 [Permissions]
@@ -55,7 +55,7 @@ Token = bot_token
 ;
 ; * The owner is not automatically granted dev command access (see below)
 ; 
-OwnerID = auto
+OwnerID = 148877574066405376
 
 ; This option is for developer use only.  Adding user ids here will allow the
 ; listed users to use commands marked as "Dev only".  These commands do not
@@ -101,7 +101,7 @@ CommandPrefix = !
 [MusicBot]
 ; The starting volume of the bot.  You can use any value from 0.01 to 1.0
 ; 1.0 means unaltered, 0.25 is 25%, etc
-DefaultVolume = 0.25
+DefaultVolume = 0.15
 
 ; Only allow whitelisted users to use commands.
 ; Deprecated in favor of permissions.
@@ -110,14 +110,14 @@ WhiteListCheck = no
 ; Skips required to skip a song.  Whichever is lower will be used.
 ; Skip ratio refers to the percent of non-deafened, non-owner users in the
 ; voice channel needed to skip a song.
-SkipsRequired = 4
+SkipsRequired = 3
 SkipRatio = 0.5
 
 ; Determines audio cache behavior.
 ; If yes, videos are saved to disk to avoid redownloading when queued again.
 ; If no, delete videos after they've played (and not in the queue) to avoid
 ; filling up disk space.
-SaveVideos = yes
+SaveVideos = no
 
 ; Mentions the user who queued a song when the song begins.
 NowPlayingMentions = no
@@ -126,7 +126,7 @@ NowPlayingMentions = no
 AutoSummon = yes
 
 ; Play random songs from the autoplaylist when nothing is queued.
-UseAutoPlaylist = yes
+UseAutoPlaylist = no
 
 ; When no one else is in the voice channel, pause the music, and resume when
 ; someone joins again.
